src/main/resources/static/css/globalGym.css
html {
    font-size: 14px;
    max-width: 100vw;
  background: url('../img/escheresque_ste.png');
}

html, body {
    height: 100%;
    box-sizing: border-box;
}

.affix {
  z-index: 999;
  position: fixed;
  top: 0;
}

*:focus {
    outline: none;
}

body {
  /*font-size: 1.4em;*/
  background-size: cover;
  background: url('../img/escheresque_ste.png') repeat fixed #99bab8;
  outline: none;
  margin: 0;
  font-family: Edelsans, Avenir, sans-serif;
  color: #201419;
}

.cntr-text {
    text-align: center;
}

/*===================NAV BAR===================*/
.bar {
    color: black;
    z-index: 1;
    position: fixed;
    display: flex;
    align-content: center;
    justify-content: center;
    width: 100vw;
    background-color: rgba(46, 46, 46, 0.6);
    background-position: center;
    background-size: cover;
    top: 0;
    padding: 5px;
}

.navbar-item {
    margin: 4px;
}

.navbar-inverse {
    background-color: rgba(42, 42, 42, 0.6);
}

.search {
    flex: 1;
}

#logo {
    width: 5rem;
    height: 5rem;
}

a:visited {
    color: #00B4FF;
}

/*===================CONTENT BELOW NAVBAR===================*/

/*Wraps everything below navbar*/
#content-wrap {
  background: url('../img/gplaypattern.png') repeat;
    width: 90%;
    margin: 0 auto;
    margin-top: 75px;
    display: flex;
    flex-direction: column;
    justify-content: center;
}

#intro-search-container {
  border: 1px solid black;
  order: 1;
  width: 100%;
  background: url('../img/congruent_pentagon.png');
}

#intro-div {
  color: #ffffff;
}

#intro-div h2 {
  background: url('../img/dark_mosaic.png');
}

#intro-div p {
  margin-left: 10px;
  background-color: rgba(18, 18, 18, 0.8);
}

#search-wrapper {
  margin: 0 auto;
  width: 345px;
  display: flex;
  flex-direction: row;
  justify-content: center;
  color: #e9d8a8;
}

#city-input {
  margin: 0 auto;
  width: 345px;
  background-color: #cefffc;
  border-style: inset;
  border-radius: 8px 0 0 8px;
  text-align: center;
  font-size: 2rem;
}

#get-info {
  position: relative;
  left: 0;
  bottom: 0;
  padding: 2px;
  height: 34px;
  width: 45px;
  margin: 0 auto;
  color: #201419;;
  border-style: outset;
  border-radius: 0 8px 8px 0;
  font-size: 1.3em;
  background: #cefffc;
  /*border: 1px solid #FFFFFF;*/
  opacity: 0.8;
}

#get-info:hover {
  color: #ffffff;
  border-style: inset;
}

#icon-container {
  background-image: url('../img/002-compass.svg');
  position: relative;
  width: 20em;
  height: 20em;
  padding: 2.8em;
  border-radius: 50%;
  margin: 2.7em auto;
}

#icon-container a {
    display: block;
    position: absolute;
    top: 50%;
    left: 50%;
    width: 4em;
    height: 4em;
    margin: -2em;
}

/*ICON PLACEMENT AROUND AXIS*/
#icon-container img {
    background: rgba(44, 44, 44, 0.8);
    border-radius: 50%;
    display: block;
    width: 100%;
}

#icon-container img:hover {
    border: 2px solid #ffffff;
    cursor: pointer;
}

#deg0 { transform: translate(10em); } /* 12em = half the width of the wrapper */
#deg27692 { transform: rotate(30deg) translate(10em) rotate(-30deg); }
#deg55384 { transform: rotate(60deg) translate(10em) rotate(-60deg); }
#deg83076 { transform: rotate(90deg) translate(10em) rotate(-90deg); }
#deg11076 { transform: rotate(120deg) translate(10em) rotate(-120deg); }
#deg13846 { transform: rotate(150deg) translate(10em) rotate(-150deg); }
#deg16615 { transform: rotate(180deg) translate(10em) rotate(-180deg); }
#deg19384 { transform: rotate(210deg) translate(10em) rotate(-210deg); border: 2px solid #00b4ff; border-radius: 50%;}
#deg22153 { transform: rotate(240deg) translate(10em) rotate(-240deg); border: 2px solid #00b4ff; border-radius: 50%; }
#deg24923 { transform: rotate(270deg) translate(10em) rotate(-270deg); border: 2px solid #00b4ff; border-radius: 50%; }
#deg276-92 { transform: rotate(300deg) translate(10em) rotate(-300deg); border: 2px solid #00b4ff; border-radius: 50%; }
#deg30461 { transform: rotate(330deg) translate(10em) rotate(-330deg); border: 2px solid #00b4ff; border-radius: 50%; }

.intro-title {
  text-align: center;
  display: block;
  width: 100%;
    height: 17%;
  margin-top: 2em;
  padding: 5px;
  background-color: #00b4ff;
  position: relative;
  top: -8.5%;
  transform: translateY(-50%);
}

/*==================ICONS==================*/
#info-card-container {
  color: #EEEEEE;
  overflow: scroll;
  z-index: 2;
  background-image: url('../img/dark_mosaic.png');
  border: 2px inset cyan;
  border-radius: 20px;
  font-size: 1.4em;
  margin-top: 1.6em;
  margin-bottom: 1.6em;
  justify-content: center;
  width: 100%;
  height: 50vh;
  display: flex;
  flex-direction: column;
}

.info-card-img {
  width: 2em;
  height: 1.95em;
  position: relative;
  left: 5px;
  top: -102px;
}

.warning-div {
  display: flex;
  align-items: center;
  justify-items: center;
  align-content: center;
  justify-content: center;
  border-radius: 19px;
  text-align: center;
  z-index: 1;
  height: 100%;
  width: 100%;
  font-size: 1.4em;
  background-color: #e9d8a8;

}

.text-div {
  height: 50%;
  display: inline-block;
  background-color: #cefffc;
  color: #201419;
}

.icon {
  height: 32px;
  width: 32px;
}

.user-icon {
  background-color: #00b4ff;
}

.info {
  height: 100%;
  width: 100%;
}

.info-card {
  display: flex;
  flex-wrap: wrap;
  border-radius: 8px;
  color: #201419;
  position: relative;
  box-shadow: 0 4px 8px 0 #19211f;
  margin: 5px auto;
  margin-bottom: 0;
  width: 90%;
  font-size: 1em;
  text-align: center;
  background-color: #bffff0;
}

#initial-info-message {
  text-align: center;
  color: #00b4ff;
  margin: 0 auto;
  display: inline-block;
  font-size: 2em;
}

.hidden {
  display: none;
}

#job-dropdown {
  text-align: center;
  width: 70%;
  background: grey;
  font-size: 1.2em;
  height: 12%;
}

#dropdown-container {
  height: 100%;
  width: 100%;
}

/*Wraps location-image, location-name and location-info*/
#city-info-wrap {
    background-color: #abdde9;
}

#location-image {
    border: 2px #a0ffe2 solid;
    width: 100%;
}

#location-name {
/*TODO Put this inside of the city photo.*/
}

#location-info {
  color: #e4eeec;
    background-color: #121212;
    width: 100%;
    box-shadow: 0 4px 8px 0 #563444;
    text-align: center;
}

#map-backdrop {
    height: 345px;
}

#map-backdrop-img {
    display: block;
    height: 100%;
    margin: auto;
}

/*Self-explanatory, sits in its own section*/
#map {
    position: relative;
    top: -270px;
    margin: 5px auto;
    z-index: 0;
    background-color: rgba(240, 255, 255, 0.65);
    height: 200px;
    width: 300px;
    border-radius: 3%;
}

#averages-title {
    font-weight: bold;
}

footer {
    margin: auto;
}

#moveAllFlds{
    border-color: white;
    border: solid;
    height: 215px;
    margin-top: -10px;
}

#logBtn{
    margin-top: 15px;
}

#updateProfile{
    font-size: 25px;
    color: white;
}

.semi-transparent-button {
    display: block;
    box-sizing: border-box;
    margin: 0 auto;
    padding: 8px;
    width: 80%;
    max-width: 200px;
    background: #fff; /* fallback color for old browsers */
    background: rgba(255, 255, 255, 0.1);
    border-radius: 5px;
    color: #515151;
    text-align: center;
    text-decoration: none;
    letter-spacing: 1px;
    transition: all 0.3s ease-out;
    position: relative;
    top: 145px;
    border: dimgray;
    border-style: solid;
    border-width: 1px;
}

#titleLbl {
    margin-left: 450px;
    margin-top: 50px;
}

.error {
    color: red;
    font-size: large;
}

#errorDiv {
    margin-top: 160px;
    margin-left: -90px;
}

.site-name {
    color: white;
    font-size: 1.5em;
    margin-top: 10px;
}

.moveFldsDiv {
    margin-top: 85px;
}

#logBtn {
    margin-top: 15px;
}

#burger {
    position: absolute;
    top: -1%;
    right: 1%;
}

#user-options {
    border: solid;
    border-color: black;
    height: 215px;
}

.label-update {
    color: white;
    background-color: black;
    margin: 0px;
    height: 35px;
    padding-top: 0.5%;
    padding-left: 0.5%;
}

#space-line {
    height: 10px;
}

#move-cred-fields {
    padding-top: 1%;
    padding-left: 1%;
}

#profile-tag {
    color: black;
    padding-top: 33px;
    font-size: 45px;
}

#user-pass-space {
    margin-top: 1%;
    height: 1%;
    width: 1%;
}

.left-margin {
    margin-left: 1%;
}

.footer {
    display: block;
    text-align: center;
    font-size: 1.5em;
}

footer {
    width: 19%;
    margin: 1% auto;
}

.inputLabels {
    font-size: 1.5em;
    margin-left: 25%;
}

.regUsePwr {
    border-radius: 8px;
    background-color: #515151;
    color: #00B4FF;
    margin: 0 auto;
    width: 50%;
    font-size: 1.3em;
    font-weight: bold;
}

.regEmail {
    border-radius: 8px;
    background-color: #00B4FF;
    color: #515151;
    margin: 0 auto;
    width: 50%;
    font-size: 1.3em;
    font-weight: bold;
}

.regBtn {
    display: block;
    margin: 1% auto;
}

#regHead {
    text-align: center;
    font-size: 4em;
    font-weight: bold;
}

/*MEDIA QUERIES*/
@media (min-width: 768px) {

  #intro-search-container {
    color: white;
    background: url('../img/congruent_pentagon.png');
    display: flex;
    flex-direction: row;
    justify-items: center;
    order: 1;
    width: 100%;
  }

  #content-wrap {
    flex-direction: row;
    flex-wrap: wrap;
  }

  #search-wrapper {
    display: flex;
    align-items: center;
    order: 1;
  }

  #icons-info-container {
    display: flex;
    flex-direction: row;
    align-items: center;
    /*justify-content: center;*/
    justify-items: center;
    order: 2;
    width: 100%;
  }

  #icon-container {
    margin: 5% 10%;
    background-position: center;
  }

  #map-backdrop {
    margin: 0 auto;
    order: 3;
  }

  .city-info-wrap {
    border: solid #00b4ff 2px;
    display: flex;
    flex-direction: column;
    align-items: center;
    margin: 0 auto;
    width: 50%;
    order: 4;
  }

  footer {
    width: 100%;
    order: 999;
  }

  #backdrop-container {
    height: 100%;
    width: 100%;
    /*background: url('../img/escheresque_ste.png');*/
  }

  #info-card-container {
    color: #EEEEEE;
    overflow: scroll;
    z-index: 2;
    background-image: url('../img/dark_mosaic.png');
    border: 2px inset cyan;
    border-radius: 20px;
    font-size: 1.4em;
    margin-right: 1.6em;
    margin-top: 1.6em;
    margin-bottom: 1.6em;
    justify-content: center;
    width: 50%;
    height: 50vh;
    display: flex;
    flex-direction: column;
  }

  #image-container {
    border: none;
    width: 100%
  }

  .btn-link {
    margin-top: 11%;
  }

  .cost-icon {
    width: 8%;
  }

  #monthly-average span {
    display: block;
  }

  #daily-average span {
    display: block;
  }

  #icon-container a img {
    transition: all .2s ease-in-out;
  }

  #icon-container a img:hover {
    transform: scale(1.4);
  }
}

